cabal-version:      3.0
name:               lisp-hs
version:            0.1.0.0
synopsis:           A simple Lisp interpreter written in Haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             tjcardinal
maintainer:         tylerjcardinal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Repl

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable lisp-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        lisp-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lisp-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          ReplTest.hs
    build-depends:
        base ^>=4.16.1.0,
        lisp-hs,
        tasty,
        tasty-hunit